# coala

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/coala/: __init__.py
src/coala/2minute_lab/: mist.yaml
src/coala/hershey_lab/: wind.yaml
src/coala/tutorial_lab/: clay.yaml  sunset.yaml
tests/: conftest.py
tests/2minute_lab/: test_each_elems.py
tests/hershey_lab/: test_each_elems.py
tests/sample_lab/: test_each_elems.py
tests/tutorial_lab/: test_each_elems.py
