[project]
name = "coala"
version = "0.1.0"
description = "A git based coworking platform for element discovery."
readme = "README.md"
authors = [
    { name = "Jihoon Lee", email = "zhoonit@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "fire>=0.7.1",
    "infinite-craft>=1.2.2",
]

[project.scripts]
coala = "coala:cli"

[tool.uv]
default-groups = ["dev"]

[dependency-groups]
dev = [
    "black>=26.3.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[build-system]
requires = ["uv_build>=0.11.3,<0.12.0"]
build-backend = "uv_build"
